--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -2,3 +2,6 @@ html
     body
         h1 #{title}
         p Nothing to see here.
+        form(action='/hideText', method='POST', encType="multipart/form-data")
+            input(type='file' name='wav')
+            input(type='submit')
