--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -1,28 +1,46 @@
-<!DOCTYPE html>
+doctype html
 html
     head
         meta(name="viewport" content="width=device-width, initial-scale=1")
         meta(charset="utf-8")
-        link(rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css")
+        link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous")
+        script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js")        
         script(defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js")
+        script(src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous")
+        script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous")
+        script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous")
     body
         section(class="section")
             div(class="container")
-                h1(class="title") #{title}
-                p encode.
-                form(action='/hideText', method='POST', encType="multipart/form-data")
-                    input(type='file' name='wav')
-                    input(type='submit')
-                p decode.
-                form(action='/revealText', method='POST', encType="multipart/form-data")
-                    input(type='file' name='wav')
-                    input(type='submit')
-                p Encode Image.
-                form(action='/hideImage', method='POST', encType="multipart/form-data")
-                    input(type='file' name='wav')
-                    input(type='submit')
-                p Reveal Image.
-                form(action='/revealImage', method='POST', encType="multipart/form-data")
-                    input(type='file' name='wav')
-                    input(type='submit')
-            
+                h1(class="title") Encode and decrypt your message in .wav file 
+                nav 
+                    div(class="nav nav-tabs" id="nav-tab" role="tablist")
+                        a(class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-text" role="tab" aria-controls="nav-home" aria-selected="true") Text
+                        a(class="nav-item nav-link active" id="nav-image-tab" data-toggle="tab" href="#nav-image" role="tab" aria-controls="nav-image" aria-selected="true") Image
+                div(class="tab-content" id="nav-tabContent")
+                    div(class="tab-pane fade show active" id="nav-text" role="tabpanel" aria-labelledby="nav-text-tab")
+                        p Encode 
+                        form(action='/hideText', method='POST', encType="multipart/form-data")
+                                input(type="text" name="message" placeholder="Your secret message here !")
+                                input(type='file' name='wav')
+                                input(type='submit')
+                        p Decode 
+                        form(action='/revealText', method='POST', encType="multipart/form-data")
+                            input(type='file' name='wav')
+                            input(type='submit')
+                    div(class="tab-pane fade" id="nav-image" role="tabpanel" aria-labelledby="nav-image-tab")
+                        p Encode Image.
+                        form(action='/hideImage', method='POST', encType="multipart/form-data")
+                            input(type='file' name='wav')
+                            input(type='submit')
+                        p Reveal Image.
+                        form(action='/revealImage', method='POST', encType="multipart/form-data")
+                            input(type='file' name='wav')
+                            input(type='submit')
+        script.
+            console.log("Nav imported !");
+            $('#myTab a').on('click', function (e) {
+                console.log(e);
+                e.preventDefault()
+                $(this).tab('show')
+            })
