Adaptation apres merge

--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -40,9 +40,9 @@ html
                             h3 Encode your image in a .wav file 
                             form(action='/hideImage', method='POST', encType="multipart/form-data")
                                 div(class="form-group") 
-                                    label(for="wav") Your .jpg file
+                                    label(for="wav") Your image file
                                     br
-                                    input(type='file' name='wav')
+                                    input(type='file' name='image')
                                 div(class="form-group") 
                                     label(for="wav") Your .wav file
                                     br
