--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -12,8 +12,8 @@ html
                 h1(class="title mb-3") Encode and decrypt your message in .wav file 
                 nav
                     div(class="nav nav-tabs" id="nav-tab" role="tablist")
-                        a(class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true") Home
-                        a(class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false") Profile
+                        a(class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true") Text
+                        a(class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false") Image
                 div(class="tab-content" id="nav-tabContent")
                     div(class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab")
                         div.mt-3
