--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -12,16 +12,6 @@ html
     body
         section(class="section")
             div(class="container")
-                div#alert-message
-                    div#inner-message
-                        div(id="error" class="alert alert-danger alert-dismissible fade show" role="alert")
-                            div#alert-message-error Une erreur est survenue
-                            button(type="button" class="close" data-dismiss="alert" aria-label="Close")
-                                span(aria-hidden="true")
-                        //- div(id="success" class="alert alert-success alert-dismissible fade" role="alert")
-                        //-     div#alert-message-success
-                        //-     button(type="button" class="close" data-dismiss="alert" aria-label="Close")
-                        //-         span(aria-hidden="true")
                 h1(class="title mb-3 mt-5") Encode and decrypt your message in .wav file 
                 nav
                     div(class="nav nav-tabs" id="nav-tab" role="tablist")
@@ -39,6 +29,8 @@ html
                                     label(for="wav") Your .wav file 
                                     br
                                     input(required type='file' id="wav" name='wav')
+                                div(id="hideText-error" class="alert alert-danger" role="alert" style="display:none")
+                                div(id="hideText-success" class="alert alert-success" role="alert" style="display:none")
                                 button(type='submit' class="btn btn-primary mb-2") Confirm
                         div.mt-3
                             h3 Decode a message from a .wav file 
@@ -70,6 +62,7 @@ html
                                     input(required type='file' name='wav')
                                 button(type='submit' class="btn btn-primary mb-2") Confirm
         script.
+            /* HIDE TEXT */
             $("#hideText").submit(function(event){
                 var formData = new FormData();
                 var message = event.target[0];
@@ -84,11 +77,10 @@ html
                     },
                     responseType: "blob"
                 }).then(function(response){
-                    console.log(response);
                     download(response.data);
+                    displayMessage(event.target.id, "success", "Bien joué ! La CIA ne pourra pas vous attraper !");                    
                 }).catch(function(error){
-                    $('.alert').alert();
-                    console.log(error);                    
+                    displayMessage(event.target.id, "error", error.response.statusText);
                 })
 
                 event.preventDefault();
@@ -101,4 +93,16 @@ html
                 link.setAttribute('download', 'confidential.wav');
                 document.body.appendChild(link);
                 link.click();
+            }
+
+            function hideMessage(id){
+                var alertIdSuccess = "#" + id + "-success";
+                var alertIdError = "#" + id + "-error";
+                $(alertIdSuccess).css("display", "none");
+                $(alertIdError).css("display", "none");
+            }
+
+            function displayMessage(id, type, message){
+                var alertId = "#" + id + "-" + type;
+                $(alertId).text(message).css("display", "block");
             }
