--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -45,7 +45,7 @@ html
                     div(class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab")
                         div.mt-3
                             h3 Encode your image in a .wav file 
-                            form(action='/hideImage', method='POST', encType="multipart/form-data")
+                            form(id="hideImage" action='/hideImage', method='POST', encType="multipart/form-data")
                                 div(class="form-group") 
                                     label(for="wav") Your image file
                                     br
@@ -53,19 +53,25 @@ html
                                 div(class="form-group") 
                                     label(for="wav") Your .wav file
                                     br
-                                    input(required type='file' name='wav')    
+                                    input(required type='file' name='wav') 
+                                div(id="hideImage-error" class="alert alert-danger" role="alert" style="display:none")
+                                div(id="hideImage-success" class="alert alert-success" role="alert" style="display:none")
                                 button(type='submit' class="btn btn-primary mb-2") Confirm     
                         div.mt-3                        
                             h3 Decode a message from a .wav file
-                            form(action='/revealImage', method='POST', encType="multipart/form-data")
+                            form(id="revealImage" action='/revealImage', method='POST', encType="multipart/form-data")
                                 div(class="form-group") 
                                     label(for="wav") Your .wav file
                                     br
                                     input(required type='file' name='wav')
+                                div(id="revealImage-error" class="alert alert-danger" role="alert" style="display:none")
+                                div(id="revealImage-success" class="alert alert-success" role="alert" style="display:none")
                                 button(type='submit' class="btn btn-primary mb-2") Confirm
         script.
             /* HIDE TEXT */
             $("#hideText").submit(function(event){
+                hideMessage(event.target.id);
+
                 var formData = new FormData();
                 var message = event.target[0].value;
                 console.log(message);
@@ -80,7 +86,7 @@ html
                     },
                     responseType: "blob"
                 }).then(function(response){
-                    download(response.data);
+                    download(response.data, 'wav');
                     displayMessage(event.target.id, "success", "Bien joué ! La CIA ne pourra pas vous attraper !");                    
                 }).catch(function(error){
                     displayMessage(event.target.id, "error", error.response.statusText);
@@ -91,10 +97,10 @@ html
 
             /* REVEAL TEXT */
             $("#revealText").submit(function(event){
+                hideMessage(event.target.id);
+
                 var formData = new FormData();
-                console.log(event);
                 var file = event.target[0].files[0];    
-                console.log(file);            
                 formData.append('wav', file);
 
                 axios.post('/revealText', formData, {
@@ -112,11 +118,63 @@ html
                 event.preventDefault();
             });
 
-            function download(data){
+            /* HIDE IMAGE */
+            $("#hideImage").submit(function(event){
+                hideMessage(event.target.id);
+
+                var formData = new FormData();
+                var image = event.target[0].files[0];
+                var file = event.target[1].files[0];                
+                console.log(event);
+
+                formData.append('image', image);
+                formData.append('wav', file);
+
+                axios.post('/hideImage', formData, {
+                    headers: {
+                        'Content-Type': 'multipart/form-data'
+                    },
+                    responseType: "blob"
+                }).then(function(response){
+                    download(response.data, 'wav');
+                    displayMessage(event.target.id, "success", "Bien joué ! La CIA ne pourra pas vous attraper !");                    
+                }).catch(function(error){
+                    displayMessage(event.target.id, "error", error.response.statusText);
+                })
+
+                event.preventDefault();
+            });
+
+            /* REVEAL IMAGE */
+            $("#revealImage").submit(function(event){
+                hideMessage(event.target.id);
+
+                var formData = new FormData();
+                var file = event.target[0].files[0];    
+                formData.append('wav', file);
+
+                axios.post('/revealImage', formData, {
+                    headers: {
+                        'Content-Type': 'multipart/form-data'
+                    },
+                    responseType: "blob"
+                }).then(function(response){
+                    console.log(response);
+                    download(response.data, 'jpg');
+                    displayMessage(event.target.id, "success", "Bien joué ! La CIA ne pourra pas vous attraper !");                    
+                }).catch(function(error){
+                    displayMessage(event.target.id, "error", error.response.statusText);
+                })
+
+                event.preventDefault();
+            });
+
+
+            function download(data, ext){
                 const url = window.URL.createObjectURL(new Blob([data]));
                 const link = document.createElement('a');
                 link.href = url;
-                link.setAttribute('download', 'confidential.wav');
+                link.setAttribute('download', 'confidential.'+ ext);
                 document.body.appendChild(link);
                 link.click();
             }
